apps/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-internal
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.internal.fferrando.cc`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-internal-tls
