apps/vaultwarden/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress-policy
  namespace: vaultwarden
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vaultwarden
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
